2009-04-14  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_get_details): close gtkrc files after use so
	we don't run out of file descriptors (bug #578835)

2009-03-19  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_init): search the GTK+ icon theme
	search path for icon themes, not just selected directories (fixes
	bug #575906)

==================== 2.25.90 ====================

2009-01-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (handle_change_signal), (update_theme_index),
	(update_common_theme_dir_index):
	* gnome-theme-info.h: add GnomeThemeElement parameter to the
	ThemeChangedCallback so that the receiver can determine what part of
	the theme changed (part of bug #568595)

==================== 2.25.3 ====================
==================== 2.25.2 ====================

2008-11-30  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_get_details): don't recognize "" as a valid
	engine for certain odd GTK themes (see bug #315286 for an example)

2008-11-27  Jens Granseuer  <jensgr@gmx.net>

	* capplet-util.c: (directory_delete_recursive): don't try to delete
	the directory twice; fixes cleaning up after theme installations, for
	example (bug #562371)

==================== 2.25.1 ====================

2008-10-26  Jens Granseuer  <jensgr@gmx.net>

	* capplet-util.c: (capplet_help): fix error handling even more - don't
	free the error twice

2008-10-26  Jens Granseuer  <jensgr@gmx.net>

	* capplet-util.c: (capplet_help): fix error handling

Fri Oct 24 19:18:37 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.c: Include <stdlib.h>
	* capplet-util.h: Delete COPY_FROM_LEGACY macro

Fri Oct 24 19:04:38 2008  Søren Sandmann  <sandmann@redhat.com>

	* gconf-property-editor.c: Delete unused function
	gconf_property_editor_new_filename() 

Fri Oct 24 18:38:47 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.c (capplet_init): Only call
	set_translation_domain() if the context is non-NULL
